--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,4 @@ Flask[cli]>=3.1.0 # Needed for running db commands in Railway shell
 email-validator>=1.1 # Using >=1.1 as it's commonly used with WTForms
 Flask-Limiter>=3.0 
 requests>=2.20.0
+sendgrid>=6.9.7
