--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,4 @@ email-validator>=1.1 # Using >=1.1 as it's commonly used with WTForms
 Flask-Limiter>=3.0 
 requests>=2.20.0
 sendgrid>=6.9.7
-sentry-sdk[flask]
+sentry-sdk[flask]>=1.0.0
